src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_atleast_1d(value self);
value atg_atleast_1d_sequence(value tensors);
value atg_atleast_2d(value self);
value atg_atleast_2d_sequence(value tensors);
value atg_atleast_3d(value self);
value atg_atleast_3d_sequence(value tensors);
value atg_avg_pool1d(value self, value kernel_size, value stride, value padding, int ceil_mode, int count_include_pad);
value atg_avg_pool1d_out(value out, value self, value kernel_size, value stride, value padding, int ceil_mode, int count_include_pad);
value atg_avg_pool2d(value self, value kernel_size, value stride, value padding, int ceil_mode, int count_include_pad, value divisor_override);
value atg_avg_pool2d_backward(value grad_output, value self, value kernel_size, value stride, value padding, int ceil_mode, int count_include_pad, value divisor_override);
value atg_avg_pool2d_backward_grad_input(value grad_input, value grad_output, value self, value kernel_size, value stride, value padding, int ceil_mode, int count_include_pad, value divisor_override);
value atg_avg_pool2d_out(value out, value self, value kernel_size, value stride, value padding, int ceil_mode, int count_include_pad, value divisor_override);
value atg_avg_pool3d(value self, value kernel_size, value stride, value padding, int ceil_mode, int count_include_pad, value divisor_override);
value atg_avg_pool3d_backward(value grad_output, value self, value kernel_size, value stride, value padding, int ceil_mode, int count_include_pad, value divisor_override);
value atg_avg_pool3d_backward_grad_input(value grad_input, value grad_output, value self, value kernel_size, value stride, value padding, int ceil_mode, int count_include_pad, value divisor_override);
value atg_avg_pool3d_out(value out, value self, value kernel_size, value stride, value padding, int ceil_mode, int count_include_pad, value divisor_override);
value atg_baddbmm(value self, value batch1, value batch2, value beta, value alpha);
value atg_baddbmm_(value self, value batch1, value batch2, value beta, value alpha);
value atg_baddbmm_out(value out, value self, value batch1, value batch2, value beta, value alpha);
value atg_bartlett_window(int64_t window_length, int options_kind, int options_device);
value atg_bartlett_window_out(value out, int64_t window_length);
value atg_bartlett_window_periodic(int64_t window_length, int periodic, int options_kind, int options_device);
value atg_bartlett_window_periodic_out(value out, int64_t window_length, int periodic);
value atg_batch_norm(value input, value weight, value bias, value running_mean, value running_var, int training, double momentum, double eps, int cudnn_enabled);
value atg_batch_norm_backward_elemt(value grad_out, value input, value mean, value invstd, value weight, value sum_dy, value sum_dy_xmu, value count);
value atg_batch_norm_backward_elemt_out(value out, value grad_out, value input, value mean, value invstd, value weight, value sum_dy, value sum_dy_xmu, value count);
value atg_batch_norm_backward_reduce(value grad_out, value input, value mean, value invstd, value weight, int input_g, int weight_g, int bias_g);
value atg_batch_norm_backward_reduce_out(value out0, value out1, value out2, value out3, value grad_out, value input, value mean, value invstd, value weight, int input_g, int weight_g, int bias_g);
value atg_batch_norm_elemt(value input, value weight, value bias, value mean, value invstd, double eps);
value atg_batch_norm_elemt_out(value out, value input, value weight, value bias, value mean, value invstd, double eps);
value atg_batch_norm_gather_stats(value input, value mean, value invstd, value running_mean, value running_var, double momentum, double eps, int64_t count);
value atg_batch_norm_gather_stats_out(value out0, value out1, value input, value mean, value invstd, value running_mean, value running_var, double momentum, double eps, int64_t count);
value atg_batch_norm_gather_stats_with_counts(value input, value mean, value invstd, value running_mean, value running_var, double momentum, double eps, value counts);
value atg_batch_norm_gather_stats_with_counts_out(value out0, value out1, value input, value mean, value invstd, value running_mean, value running_var, double momentum, double eps, value counts);
value atg_batch_norm_stats(value input, double eps);
value atg_batch_norm_stats_out(value out0, value out1, value input, double eps);
value atg_batch_norm_update_stats(value input, value running_mean, value running_var, double momentum);
value atg_batch_norm_update_stats_out(value out0, value out1, value input, value running_mean, value running_var, double momentum);
value atg_bernoulli(value self);
value atg_bernoulli_(value self, value p);
value atg_bernoulli_float_(value self, double p);
value atg_bernoulli_p(value self, double p);
value atg_bernoulli_tensor(value self, value p);
value atg_bilinear(value input1, value input2, value weight, value bias);
value atg_binary_cross_entropy(value self, value target, value weight, int64_t reduction);
value atg_binary_cross_entropy_backward(value grad_output, value self, value target, value weight, int64_t reduction);
value atg_binary_cross_entropy_backward_grad_input(value grad_input, value grad_output, value self, value target, value weight, int64_t reduction);
value atg_binary_cross_entropy_out(value out, value self, value target, value weight, int64_t reduction);
value atg_binary_cross_entropy_with_logits(value self, value target, value weight, value pos_weight, int64_t reduction);
value atg_binary_cross_entropy_with_logits_out(value out, value self, value target, value weight, value pos_weight, int64_t reduction);
value atg_bincount(value self, value weights, int64_t minlength);
value atg_bincount_out(value out, value self, value weights, int64_t minlength);
value atg_binomial(value count, value prob);