src/bindings/torch_bindings_generated2.ml

(* THIS FILE IS AUTOMATICALLY GENERATED, DO NOT EDIT BY HAND! *)

open Ctypes

module C0 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_atleast_1d = foreign "atg_atleast_1d" (gc_tensor @-> returning raw_tensor)

  let stubs_atleast_1d_sequence =
    foreign
      "atg_atleast_1d_sequence"
      (ptr gc_tensor @-> int @-> returning (ptr raw_tensor))
  ;;

  let stubs_atleast_2d = foreign "atg_atleast_2d" (gc_tensor @-> returning raw_tensor)

  let stubs_atleast_2d_sequence =
    foreign
      "atg_atleast_2d_sequence"
      (ptr gc_tensor @-> int @-> returning (ptr raw_tensor))
  ;;

  let stubs_atleast_3d = foreign "atg_atleast_3d" (gc_tensor @-> returning raw_tensor)

  let stubs_atleast_3d_sequence =
    foreign
      "atg_atleast_3d_sequence"
      (ptr gc_tensor @-> int @-> returning (ptr raw_tensor))
  ;;

  let stubs_avg_pool1d =
    foreign
      "atg_avg_pool1d"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_avg_pool1d_out =
    foreign
      "atg_avg_pool1d_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_avg_pool2d =
    foreign
      "atg_avg_pool2d"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_avg_pool2d_backward =
    foreign
      "atg_avg_pool2d_backward"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_avg_pool2d_backward_grad_input =
    foreign
      "atg_avg_pool2d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_avg_pool2d_out =
    foreign
      "atg_avg_pool2d_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_avg_pool3d =
    foreign
      "atg_avg_pool3d"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_avg_pool3d_backward =
    foreign
      "atg_avg_pool3d_backward"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_avg_pool3d_backward_grad_input =
    foreign
      "atg_avg_pool3d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_avg_pool3d_out =
    foreign
      "atg_avg_pool3d_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_baddbmm =
    foreign
      "atg_baddbmm"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_baddbmm_ =
    foreign
      "atg_baddbmm_"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_baddbmm_out =
    foreign
      "atg_baddbmm_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_bartlett_window =
    foreign "atg_bartlett_window" (int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_bartlett_window_out =
    foreign "atg_bartlett_window_out" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_bartlett_window_periodic =
    foreign
      "atg_bartlett_window_periodic"
      (int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_bartlett_window_periodic_out =
    foreign
      "atg_bartlett_window_periodic_out"
      (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_batch_norm =
    foreign
      "atg_batch_norm"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> double
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_batch_norm_backward_elemt =
    foreign
      "atg_batch_norm_backward_elemt"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_batch_norm_backward_elemt_out =
    foreign
      "atg_batch_norm_backward_elemt_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_batch_norm_backward_reduce =
    foreign
      "atg_batch_norm_backward_reduce"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_batch_norm_backward_reduce_out =
    foreign
      "atg_batch_norm_backward_reduce_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_batch_norm_elemt =
    foreign
      "atg_batch_norm_elemt"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> returning raw_tensor)
  ;;

  let stubs_batch_norm_elemt_out =
    foreign
      "atg_batch_norm_elemt_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> returning raw_tensor)
  ;;

  let stubs_batch_norm_gather_stats =
    foreign
      "atg_batch_norm_gather_stats"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> double
       @-> int64_t
       @-> returning void)
  ;;

  let stubs_batch_norm_gather_stats_out =
    foreign
      "atg_batch_norm_gather_stats_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> double
       @-> int64_t
       @-> returning void)
  ;;

  let stubs_batch_norm_gather_stats_with_counts =
    foreign
      "atg_batch_norm_gather_stats_with_counts"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> double
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs_batch_norm_gather_stats_with_counts_out =
    foreign
      "atg_batch_norm_gather_stats_with_counts_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> double
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs_batch_norm_stats =
    foreign
      "atg_batch_norm_stats"
      (ptr raw_tensor @-> gc_tensor @-> double @-> returning void)
  ;;

  let stubs_batch_norm_stats_out =
    foreign
      "atg_batch_norm_stats_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> returning void)
  ;;

  let stubs_batch_norm_update_stats =
    foreign
      "atg_batch_norm_update_stats"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> returning void)
  ;;

  let stubs_batch_norm_update_stats_out =
    foreign
      "atg_batch_norm_update_stats_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> returning void)
  ;;

  let stubs_bernoulli = foreign "atg_bernoulli" (gc_tensor @-> returning raw_tensor)

  let stubs_bernoulli_ =
    foreign "atg_bernoulli_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bernoulli_float_ =
    foreign "atg_bernoulli_float_" (gc_tensor @-> double @-> returning raw_tensor)
  ;;

  let stubs_bernoulli_p =
    foreign "atg_bernoulli_p" (gc_tensor @-> double @-> returning raw_tensor)
  ;;

  let stubs_bernoulli_tensor =
    foreign "atg_bernoulli_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_bilinear =
    foreign
      "atg_bilinear"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_binary_cross_entropy =
    foreign
      "atg_binary_cross_entropy"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_binary_cross_entropy_backward =
    foreign
      "atg_binary_cross_entropy_backward"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_binary_cross_entropy_backward_grad_input =
    foreign
      "atg_binary_cross_entropy_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_binary_cross_entropy_out =
    foreign
      "atg_binary_cross_entropy_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_binary_cross_entropy_with_logits =
    foreign
      "atg_binary_cross_entropy_with_logits"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_binary_cross_entropy_with_logits_out =
    foreign
      "atg_binary_cross_entropy_with_logits_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_bincount =
    foreign "atg_bincount" (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_bincount_out =
    foreign
      "atg_bincount_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_binomial =
    foreign "atg_binomial" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;
